@@ -56,7 +56,7 @@
 
 #include <sqlite3.h>
 
-#define MINIDLNA_VERSION "1.0.21"
+#define MINIDLNA_VERSION "1.0.21.2"
 
 #ifdef NETGEAR
 # define SERVER_NAME "ReadyDLNA"
