@@ -1,6 +1,10 @@
 1.0.22 - Released 00-Month-0000
 --------------------------------
-- Add bookmark support for Samsung TV's.
+- Add bookmark support for some Samsung TV's.
+- Fix a memory leak when certain model Samsung TV's or Roku devices are on the network.
+- Fix detection of Samsung Series D models.
+- Add WAV MIME workaround for Marantz Receivers and Roku SoundBridge.
+- Fix bitrate displayed on Microsoft PFS devices.
 
 1.0.21 - Released 18-July-2011
 --------------------------------
